New bullet Spritesheet

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				$("#login").fadeOut('slow',function(){$("#container").show('slow')});
 				ragebots = new Game();
 				ragebots.GameStart();	
-			}, 1500);	
+			}, 0);	
 			
 			//Start the game
 
@@ -119,6 +119,7 @@
 			
 			queue = [
 				"assets/sprites/master.png",
+				"assets/sprites/bullets.png",
 				"assets/sprites/bullet.png"
 			];
 			
